# stroke_prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: cuaderno_stroke_prediction.ipynb
src/stroke_prediction/: stroke_predict_app.py  stroke_predict_app_streamlit.py  stroke_predict_service.py
