[project]
name = "stroke-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "jgardom0208",email = "juananinsituto217@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "stroke_prediction", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
